<resources>
    <string name="app_name">حديث شريف</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">الرئيسية</string>
    <string name="favorite">المفضلة</string>
    <string name="all"> الاحاديث</string>
    <string name="search">بحث</string>
    <string name="text_benefit">نصيحة لمن عجز عن قيام الليل والصدقة</string>
    <string name="body_of_hadith">(( لن يَسمَعَ بي أحدٌ مِن هذه الأمةِ ، ولا يهوديٌّ ، ولا نصرانيٌّ ، ثم لا يؤمِنُ بي ، إلا كان مِن أصحابِ النارِ ، قال : قلتُ : ما قال رسولُ اللهِ صلَّى اللهُ عليه وسلَّم شيئًا إلا كان في كتابِ اللهِ عزَّ وجلَّ ، قال : فوجَدتُ ومَن يَكفُرْ به منَ الأحزابِ فالنارُ مَوعِدُه ))</string>
    <string name="source">المصدر |</string>
    <string name="narrator">الراوى |</string>
    <string name="almahdath">المحدث |</string>
    <string name="explanation">التفسير |</string>
    <string name="explanation2">
        يُخبِرُ رسولُ اللهِ صلَّى اللهُ علَيه وسلَّم في هذا الحديثِ أنَّه: "لا يؤمِنُ عبدٌ"، أي: لا يَكونُ مؤمِنًا أصلًا؛ فهو نفيٌ لأصلِ الإيمانِ لا لِكَمالِه، ولا يُعَدُّ ما عِندَه مِن تصديقِ القلبِ وإيمانِه، "حتَّى يُؤمِنَ"، أي: يَكونَ مؤمِنًا، "بأربَعٍ"، أي: بأربَعةِ أشياءَ، وهي: "يَشهَدُ"، أي: يَعْلَمُ ويَعتَقِدُ بقَلبِه ويُظهِرُ بلِسانِه "أنْ لا إلهَ إلَّا اللهُ"، أي: إنَّه لا مَعبودَ بحَقٍّ إلَّا اللهُ سبحانَه، "و" يَعْلَمَ ويَعتَقِدَ أنِّي "محمَّدٌ رسولُ اللهِ" وخاتَمُ رسُلِ اللهِ، "بعَثَني بالحقِّ"، أي: يؤمنُ بالتَّوحيدِ والرِّسالةِ، "ويؤمِنُ" أيضًا "بالموتِ"، وأنَّه حقٌّ، وأنَّ الدُّنيا تَفْنى فلا يَبْقى منها شيءٌ؛ فهي دارُ فَناءٍ فلا تَبْقَى، وأنَّ الموتَ يَكونُ بأمرِ اللهِ تعالى وقدَرِه وأجَلِه، "وبالبَعثِ"، أي: بوُقوعِ البعثِ والإحياءِ، "بعدَ الموت"، وأنَّ اللهَ تعالى يَبعَثُ مَن في القبورِ ويُخرِجُهم مِنها للحشرِ والحسابِ، "ويؤمِنُ" أيضًا، "بالقدَرِ"، وهو ما قدَّره اللهُ تعالى على عِبادِه مِن خَيرٍ أو شرٍّ؛ فمَن لم يُؤمِنْ بواحدٍ مِن هذه الأربعةِ لم يَكُنْ مُؤمِنًا.
والإيمانُ باللهِ سُبحانه وتَعالى وبمُلائكتِه وبكُتبِه وبرُسلِه وباليومِ الآخِرِ وبالقدَرِ خيرِه وشرِّه، هي أركانُ الإيمانِ؛ فلا يكونُ العبدُ مؤمِنًا حتَّى يؤمِنَ بهذه الأركانِ السِّتَّةِ، وذِكْرُ هذه الأربعةِ هنا لا يَنفي أهمِّيَّةَ الإيمانِ بالملائكةِ والكتُبِ المنزَّلةِ على الرُّسلِ؛ لأنَّ مَن آمَن باللهِ وبرَسولِه محمَّدٍ آمَن بكلِّ ما أخبَر به النَّبيُّ صلَّى اللهُ علَيه وسلَّم وبكلِّ ما جاء في كِتابِ اللهِ، فاستكمَل كلَّ أركانِ الإيمانِ.
وفي الحديثِ: أنَّ الإيمانَ باللهِ تعالى وبرَسولِه والإيمانَ بقدَرِ اللهِ تعالى خَيرِه وشرِّه، رُكنٌ لا يَصِحُّ الإيمانُ إلَّا به، وكذلك الإيمانُ بالموتِ وبالبَعثِ والنُّشورِ بعدَه.

    </string>



    <string name="no_data_in_favorite">لم تقم إختيار اى حديث بعد</string>
    <string name="no_data_in_search">من فضلك أدخل كلمات من الحديث</string>


</resources>