<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.home_fragment.HomeFragment">

            <TextView
                android:id="@+id/tv_benefit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_normal"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginEnd="@dimen/margin_normal"
                android:background="@drawable/round_shape"
                android:backgroundTint="@color/red"
                android:fontFamily="@font/amiri_bold"
                android:gravity="center"
                android:padding="@dimen/padding_small"
                android:text="@string/text_benefit"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_large"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/appCompatImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_benefit"
                app:srcCompat="@drawable/title_image" />


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image_add_delete_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_normal"
                app:layout_constraintBottom_toBottomOf="@+id/tv_almahdath"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_almahdath"
                app:srcCompat="@drawable/ic_baseline_favorite_border_24"
                />

            <TextView
                android:id="@+id/tv_body_hadith"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_normal"
                android:layout_marginTop="112dp"
                android:layout_marginEnd="@dimen/margin_normal"
                android:fontFamily="@font/amiri_bold"
                android:text="@string/body_of_hadith"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_benefit" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="@font/amiri_bold"
                android:text="@string/narrator"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_body_hadith" />


            <TextView
                android:id="@+id/tv_narrator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="@font/amiri_bold"
                android:text="على بن طالب"
                android:textColor="@color/red"
                android:textSize="@dimen/text_size_normal"
                app:layout_constraintBottom_toBottomOf="@+id/textView"
                app:layout_constraintEnd_toStartOf="@+id/textView"
                app:layout_constraintTop_toTopOf="@+id/textView" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/amiri_bold"
                android:text="@string/almahdath"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_body_hadith" />

            <TextView
                android:id="@+id/tv_almahdath"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="@font/amiri_bold"
                android:text="الالبانى"
                android:textColor="@color/red"
                android:textSize="@dimen/text_size_normal"
                app:layout_constraintBottom_toBottomOf="@+id/textView2"
                app:layout_constraintEnd_toStartOf="@+id/textView2"
                app:layout_constraintTop_toTopOf="@+id/textView2" />


            <TextView
                android:id="@+id/tv_explanation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/amiri_bold"
                android:padding="@dimen/padding_normal"
                android:text="@string/explanation2"
                android:textColor="@color/red"
                android:textSize="@dimen/text_size_normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>